samples/_failures_safe/1761628767_31cb9a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7233abb2.c: In function ‘main’:
./samples/SAFE/__tmp_7233abb2.c:173:13: error: expected declaration or statement at end of input
  173 |             buffer[len - 1] = '\0';
      |             ^~~~~~
./samples/SAFE/__tmp_7233abb2.c:173:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7233abb2.c:173:13: error: expected declaration or statement at end of input
